@@ -111,22 +111,21 @@ include_once('include/page_header.php');
 		}
 	}
 	else if(isset($_REQUEST['save'])){
-		$config = select_config();
-
-		$_REQUEST['password1'] = get_request('password1', null);
-		$_REQUEST['password2'] = get_request('password2', null);
-
-		if(($config['authentication_type'] != ZBX_AUTH_INTERNAL) && zbx_empty($_REQUEST['password1'])){
-			if(($config['authentication_type'] == ZBX_AUTH_LDAP) && isset($_REQUEST['userid'])){
-				if(GROUP_GUI_ACCESS_INTERNAL != get_user_auth($_REQUEST['userid'])){
-//					$_REQUEST['password1'] = $_REQUEST['password2'] = 'zabbix';
-				}
-			}
-			else{
-				$_REQUEST['password1'] = $_REQUEST['password2'] = 'zabbix';
-			}
+		$config = select_config();		
+		$auth_type = isset($_REQUEST['userid']) ? get_user_system_auth($_REQUEST['userid']) : $config['authentication_type'];
+		
+		if(isset($_REQUEST['userid']) && (ZBX_AUTH_INTERNAL != $auth_type)){
+			$_REQUEST['password1'] = $_REQUEST['password2'] = null;
 		}
-		if($_REQUEST['password1']!=$_REQUEST['password2']){
+		else if(!isset($_REQUEST['userid']) && (ZBX_AUTH_INTERNAL != $auth_type)){
+			$_REQUEST['password1'] = $_REQUEST['password2'] = 'zabbix';
+		}
+		else{
+			$_REQUEST['password1'] = get_request('password1', null);
+			$_REQUEST['password2'] = get_request('password2', null);
+		}
+		
+		if($_REQUEST['password1'] != $_REQUEST['password2']){
 			if(isset($_REQUEST['userid']))
 				show_error_message(S_CANNOT_UPDATE_USER_BOTH_PASSWORDS);
 			else
